--- a/src/components/App.scss
+++ b/src/components/App.scss
@@ -1,12 +1,25 @@
 @import "@styles/index.scss";
 
-#app {
-    font-size: 30px;
-    text-align: center;
+body {
+    width: 100%;
+    height: 100vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 
-    .button {
-        padding: 8px;
-        box-shadow: 0px 0px 8px 2px black;
-        border-radius: 4px;
+    #app {
+        font-size: 30px;
+        text-align: center;
+
+        .title {
+            font-weight: 400;
+            margin: 8px;
+        }
+
+        .button {
+            padding: 8px;
+            box-shadow: 0px 0px 8px 2px black;
+            border-radius: 4px;
+        }
     }
 }
