:white_check_mark: Some little changes to starter test
:white_check_mark: Some little changes to starter test

Temp, merging with last commit

--- a/src/components/App.scss
+++ b/src/components/App.scss
@@ -20,6 +20,10 @@ body {
             padding: 8px;
             box-shadow: 0px 0px 8px 2px black;
             border-radius: 4px;
+
+            &:hover {
+                background-color: #dddddd;
+            }
         }
     }
 }
