--- a/src/components/App.scss
+++ b/src/components/App.scss
@@ -25,5 +25,16 @@ body {
                 background-color: #dddddd;
             }
         }
+
+        .add-to-list-button {
+            border: 1px solid #333333;
+            border-radius: 18px;
+            font-size: 20px;
+            padding: 4px;
+
+            &:hover {
+                background-color: #dddddd;
+            }
+        }
     }
 }
